# batterycrm

./: .gitignore  123.md  CLAUDE.md  KNOWLEDGE_BASE.md  Start (2).md  Start.md  StartApi.md  StartVoice.md  Stop.md  StopApi.md  StopVoice.md  TODO_2025-12-29.md  check_parser.py  check_parser_detail.py  deploy_parser.py  live_check.py  redeploy_parser.py  run_parser.py  start_parser.py  tail_log.py
.claude/: outbox.md  settings.local.json
.cursor/: outbox.md
CORE_NEW/: CONTEXT.md
MCP/: docker-compose.yml
NEW/: ARCHITECTURE_SUMMARY_v2.md  GLOBAL_SCHEMA.md  IMPLEMENTATION_PLAN.md  N8N_CHANGES_SEND_MESSAGE.md  N8N_IMPORT_LIST.md  N8N_REDIS_IMPORT.md  N8N_SQL_FIXES.md  NEXT_STEPS.md  Schema_messagers.md
Old/: KNOWLEDGE_BASE.md
Plans/: Eldoleado full.md  Eldoleado_Спецификация_Графа.md  TZ-VPN-Infrastructure.md  База знаний по ремонту техники — iFixit Full Parser.md  (+3 more)
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ifixit-parser/: .env.example  DEPLOY.md  PARSER.md  pyproject.toml
ifixit-parser/data/raw/categories/: categories_tree.json
ifixit-parser/src/: __init__.py  config.py
ifixit-parser/src/loader/: __init__.py
ifixit-parser/src/loader/neo4j/: __init__.py  client.py
ifixit-parser/src/loader/postgres/: __init__.py  client.py  schema.py
ifixit-parser/src/parser/: main.py
ifixit-parser/src/parser/api/: __init__.py  client.py  rate_limiter.py
ifixit-parser/src/parser/extractors/: __init__.py  categories.py  devices.py  guides.py
ifixit-parser/src/parser/models/: __init__.py  api_models.py
ifixit-parser/src/utils/: __init__.py  telegram.py
(+207634 files in other folders)
