[project]
name = "ifixit-parser"
version = "1.0.0"
description = "iFixit Knowledge Base Parser for Eldoleado"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "asyncio>=3.4.3",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "neo4j>=5.15.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "tenacity>=8.2.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
ifixit-parser = "src.parser.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
